--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -21,6 +21,10 @@ h3 {
     margin-bottom: 10px;
 }
 
+#forecast {
+    justify-content: center;
+    background-color: aquamarine;
+}
 #search-col {
     margin: 10px;
 }
@@ -30,3 +34,17 @@ h3 {
     margin: 20px 20px 15px 10px;
 }
 
+.col-2 {
+    border: solid black;
+    border-radius: 10px;
+    margin: .5%;
+    justify-content: center;
+    background-color: blanchedalmond;
+   
+}
+
+.justify-content-start {
+    justify-content: center;
+    
+ 
+}
